# AgentHomeAssistant

./: .gitignore  CODE_WIKI.md  README.md  pyproject.toml
config/: device_aliases.yaml
config/scenes/: movie_mode.yaml  sleep_mode.yaml
docs/: device-selection-list.md  dual-router-feasibility-analysis.md  hermes-ha-integration-research.md  renovation-wiring-requirements.md
src/: __init__.py
src/agent/: __init__.py
src/middleware/: __init__.py  main.py
src/middleware/adapters/: __init__.py  agent_bridge.py  ha_adapter.py
src/middleware/api/: __init__.py
src/middleware/api/v1/: agent.py  config.py  state.py
src/middleware/core/: __init__.py  intent_router.py  scene_engine.py  scene_parser.py
src/middleware/internal/: __init__.py  config_manager.py  state_store.py
tests/: test_config_manager.py  test_ha_adapter.py  test_scene_engine.py  test_scene_parser.py  test_state_store.py
